Refactor urls schema
